# epa-tri-tracker

./: .railwayignore  CLAUDE.md  ENRICHMENT_PLAN.md  ENRICHMENT_PLAN_V2.md  PROBLEMS.md  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
config/: chemicals.yaml  industry_sectors.yaml  sources.yaml
docs/: methodology.md
outreach/: targets.json
outreach/email_templates/: media_template.md  organization_template.md  researcher_template.md
outreach/pitch_materials/: one_pager.md
src/: cli.py
src/dashboard/: app.py
src/export/: exporter.py
src/normalization/: enforcement_linker.py  facilities.py  rmp_linker.py
src/scrapers/: echo_downloader.py  ejscreen_downloader.py  health_downloader.py  rmp_downloader.py  superfund_downloader.py  tri_downloader.py
src/storage/: database.py
src/validation/: quality.py
tests/: test_accuracy.py  test_database.py  test_enrichment.py  test_exports.py  test_fips_resolution.py  test_health_downloader.py  test_normalization.py  test_quality.py  test_rmp.py  test_tri_downloader.py
