[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "epa-tri-tracker"
version = "0.1.0"
description = "EPA Toxic Release Inventory cross-linked with community health and demographics"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.7",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "pandas>=2.2",
    "plotly>=5.18",
    "streamlit>=1.31",
    "openpyxl>=3.1",
    "thefuzz[speedup]>=0.22",
]

[project.scripts]
epa-tri = "src.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
